add validation and image fetching

--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "dependencies": {
     "boom": "^4.2.0",
     "hapi": "^16.1.0",
-    "joi": "^10.2.2"
+    "inert": "^4.1.0",
+    "joi": "^10.2.2",
+    "lodash": "^4.17.4",
+    "wreck": "^11.0.0"
   }
 }
