--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "boom": "^4.2.0",
     "hapi": "^16.1.0",
+    "hapi-geo-locate": "^1.1.1",
     "inert": "^4.1.0",
     "joi": "^10.2.2",
     "lodash": "^4.17.4",
